--- a/source/slate/css/_icon-font.scss
+++ b/source/slate/css/_icon-font.scss
@@ -1,18 +1,18 @@
 @font-face {
   font-family: 'slate';
-  src:font-url('slate.eot?-syv14m');
-  src:font-url('slate.eot?#iefix-syv14m') format('embedded-opentype'),
-    font-url('slate.woff2?-syv14m') format('woff2'),
-    font-url('slate.woff?-syv14m') format('woff'),
-    font-url('slate.ttf?-syv14m') format('truetype'),
-    font-url('slate.svg?-syv14m#slate') format('svg');
+  src:url('../fonts/slate.eot?-syv14m');
+  src:url('../fonts/slate.eot?#iefix-syv14m') format('embedded-opentype'),
+    url('../fonts/slate.woff2?-syv14m') format('woff2'),
+    url('../fonts/slate.woff?-syv14m') format('woff'),
+    url('../fonts/slate.ttf?-syv14m') format('truetype'),
+    url('../slate.svg?-syv14m#slate') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 %icon {
   font-family: 'slate';
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
